use chance to generate random numbers

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "randomly choose a lottery",
   "main": "lottery.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node build/lottery.js"
   },
   "author": "Neil",
   "license": "ISC",
