export lottery as a module

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Lottery",
   "version": "0.0.0",
   "description": "randomly choose a lottery",
-  "main": "lottery.js",
+  "main": "./build/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./build/main.js"
